--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,8 @@
 
     ];
     cmp.imageList = imageList;
+    cmp.mode = "one";
+    cmp.startFrom = 2;
     const options = {};
     options.maxzoomscale = 3;
     options.compressionquality = 0.6;
@@ -67,13 +69,16 @@
     cmp.addEventListener('jeepPhotoViewerResult',(ev) => {
       if(ev.detail) {
         if(ev.detail.result) {
-          console.log(`in jeepPhotoViewerResult1 ${ev.detail.result}`);
+          console.log(`in jeepPhotoViewerResult result ${ev.detail.result}`);
+          if( Object.keys(ev.detail).includes("imageIndex")) {
+            console.log(`in jeepPhotoViewerResult imageIndex ${ev.detail.imageIndex}`);
+          }
           if( Object.keys(ev.detail).includes("message")) {
-            console.log(`in jeepPhotoViewerResult1 ${ev.detail.message}`);
+            console.log(`in jeepPhotoViewerResult1 message ${ev.detail.message}`);
             alert(`${ev.detail.message}`);
           }
         } else {
-          console.log(`in jeepPhotoViewerResult2 ${ev.detail.message}`);
+          console.log(`in jeepPhotoViewerResult2 message ${ev.detail.message}`);
           alert(`${ev.detail.message}`);
         }
       }
