hide placeholder for black transparent png

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
       base64Images[0],
     ];
     cmp.imageList = imageList;
-    cmp.mode = "slider";
+    cmp.mode = "gallery";
     cmp.startFrom = 2;
     const options = {};
     options.maxzoomscale = 3;
